<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Tweets</string>
    <string name="title_activity_timeline">Home Timeline</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="action_settings">Connect with Twitter</string>
    <string name="profile_name">User Name</string>
    <string name="body">Body</string>
    <string name="tweet_compose">What\'s happening?</string>
    <string name="tweet_button">Tweet</string>
    <string name="tweet_character_count">140</string>
    <string name="detail_username">Name</string>
    <string name="detail_screen_name">ScreenName</string>
    <string name="detail_body">Text</string>
    <string name="detail_created_at">Created At</string>
    <string name="at_name">Name</string>
    <string name="tweet_time_stamp">Time Stamp</string>

</resources>