<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:paddingTop="10dp" android:paddingBottom="20dp"
    android:paddingRight="10dp" android:paddingLeft="10dp">

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        style="@style/CodeFont"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body"
        android:layout_below="@+id/tvUserName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_toEndOf="@+id/ivProfileImage"
        android:layout_marginTop="14dp"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/at_name"
        android:scrollHorizontally="false"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="2dp"
        android:textSize="10dp"
        android:layout_alignTop="@+id/ivProfileImage"
        android:layout_toRightOf="@+id/tvUserName"
        android:layout_toEndOf="@+id/tvUserName" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweet_time_stamp"
        android:layout_alignTop="@+id/tvName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>